[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/pump/inflator-1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mobile/MainUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/progress_bar_texture.png" type="Texture" id=3]
[ext_resource path="res://Assets/progress_bar_over.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Mobile/PumpUpgradePopUp.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.403922, 0.737255, 0.388235, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.45098, 0.45098, 0.45098, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 98.3238 ]
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
show_behind_parent = true
anchor_bottom = 1.0
margin_right = 200.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.380392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 155.0
margin_bottom = 152.0
custom_constants/separation = 0
alignment = 2

[node name="TextureButton" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 3.0
margin_right = 155.0
margin_bottom = 152.0
rect_min_size = Vector2( 152, 152 )
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/TextureButton"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -36.0
margin_bottom = 2.0
rect_min_size = Vector2( 30, 152 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Panel/VBoxContainer/HBoxContainer/TextureButton/HBoxContainer"]
margin_right = 36.0
margin_bottom = 136.0
min_value = 1.0
max_value = 101.0
value = 1.0
exp_edit = true
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
fill_mode = 3
tint_under = Color( 0, 0.0196078, 1, 1 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 0.768627, 0.215686, 0.8, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelAir" type="Label" parent="Panel/VBoxContainer/HBoxContainer/TextureButton/HBoxContainer"]
margin_top = 140.0
margin_right = 36.0
margin_bottom = 154.0
text = "100%"
align = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 156.0
margin_right = 155.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 10 )

[node name="UpgradePump" type="Button" parent="Panel/VBoxContainer"]
margin_top = 170.0
margin_right = 155.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 30 )
text = "Upgrade"

[node name="AutoMode" type="Button" parent="Panel/VBoxContainer"]
margin_top = 204.0
margin_right = 155.0
margin_bottom = 224.0
text = "Auto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 228.0
margin_right = 155.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 10 )

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
margin_top = 242.0
margin_right = 155.0
margin_bottom = 256.0
text = "Path"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 260.0
margin_right = 155.0
margin_bottom = 296.0
rect_min_size = Vector2( 0, 36 )

[node name="Button" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_right = 35.0
margin_bottom = 36.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
text = "1"

[node name="Button2" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 36.0
size_flags_horizontal = 3
toggle_mode = true
text = "2"

[node name="Button3" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 79.0
margin_right = 115.0
margin_bottom = 36.0
size_flags_horizontal = 3
toggle_mode = true
text = "3"

[node name="Button4" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 119.0
margin_right = 155.0
margin_bottom = 36.0
size_flags_horizontal = 3
toggle_mode = true
text = "4"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 300.0
margin_right = 155.0
margin_bottom = 506.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_top = 510.0
margin_right = 155.0
margin_bottom = 524.0
text = "Health of your opponent"

[node name="ProgressHpVRMan" type="ProgressBar" parent="Panel/VBoxContainer"]
margin_top = 528.0
margin_right = 155.0
margin_bottom = 552.0
rect_min_size = Vector2( 0, 24 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Popup" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/UpgradePump" to="." method="_on_UpgradePump_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/AutoMode" to="." method="_on_AutoMode_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Button" to="." method="_on_path_selected" binds= [ 1 ]]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_path_selected" binds= [ 2 ]]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Button3" to="." method="_on_path_selected" binds= [ 3 ]]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Button4" to="." method="_on_path_selected" binds= [ 4 ]]
